Fix touch on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
   flex-direction: column;
   align-items: center;
   height: 100vh;
+  touch-action: none;
 }
 .gameBody{
   display:flex;
